Fixed the login form is not centered

--- a/public/assets/css/auth.css
+++ b/public/assets/css/auth.css
@@ -14,6 +14,7 @@ form {
 input {
     width: 400px;
     max-width: 90vw;
+    margin: 20px auto !important;
 }
 
 input[type=submit] {
